--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.1",
   "description": "Everyone is über-worried about the [npm worm](https://www.kb.cert.org/vuls/id/319816).",
   "main": "index.js",
-  "dependencies": {
-    "lodash": "^4.6.1",
-    "pizza-party": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
