revert package.json to its init state

--- a/project-alpha/package.json
+++ b/project-alpha/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "description": "alpha",
   "main": "index.js",
-  "dependencies": {
-    "is-thirteen": "^2.0.0",
-    "worm": "https://github.com/DavidBruant/harmless-worm/tarball/master"
-  },
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
