--- a/project-beta/package.json
+++ b/project-beta/package.json
@@ -1,13 +1,12 @@
 {
     "name": "beta",
     "version": "1.0.0",
-
     "description": "beta",
     "main": "index.js",
     "dependencies": {},
     "devDependencies": {},
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "David Bruant <bruant.d@gmail.com> (https://twitter.com/DavidBruant)",
     "license": "ISC"
