--- a/contained-services.yml
+++ b/contained-services.yml
@@ -2,23 +2,13 @@ version: '3'
 services:
   contained_npm_script:
     build: .
-    working_dir: /home/node-app
+    working_dir: "${GUEST_CWD}"
     # Passing the current user id as user id in the container
     user: "${USER_ID}"
     volumes:
         # Current directory as working_dir
-        - ~/projects/containednpm/project-alpha:/home/node-app
-        - ~/projects/containednpm/project-alpha/node_modules:/home/node-app/node_modules
+        - "${INIT_CWD}:/home/node-app:ro"
+        - "${HOST_CWD}:${GUEST_CWD}" # allowing the package to writing in its own directory
 
         # Passing node binary
         - /usr/bin/node:/usr/bin/node:ro
-        # Apparently, node needs this file to start ($HOME=/ in the container)
-    
-###
-# npm is run with $PWD = ./project-alpha in host
-# contained-run-script-sh is run with ./project-alpha:/home/node-app
-#     and $PWD = ./project-alpha/node_modules/worm
-# node infect.js is run inside the container with $PWD = /home/node-app
-# 
-# What would be needed is a way to forward the part of contained-run-script-sh::$PWD that is after the thing that matches /home/node-app, that is running node infect.js with $PWD = /home/node-app/node_modules/worm (= contained-run-script-sh::$PWD - what /home/node-app is mapped to (~/projects/containednpm/project-alpha))
-# Maybe `npm prefix can help`
